Refactor to improve error handling, help testability and improve test coverage of application