@@ -2,10 +2,10 @@ package org.solid.testharness.utils;
 
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class TestUtils {
     public static URL getFileUrl(String file) throws MalformedURLException {
-        return Paths.get(file).normalize().toUri().toURL();
+        return Path.of(file).normalize().toUri().toURL();
     }
 }
